--- a/cloud-back/requirements.txt
+++ b/cloud-back/requirements.txt
@@ -1,3 +1,10 @@
 aws-cdk-lib==2.143.0
 constructs>=10.0.0,<11.0.0
 boto3
+aws-cdk.core
+aws-cdk.aws-lambda
+aws-cdk.aws-apigateway
+aws-cdk.aws-s3
+aws-cdk.aws-dynamodb
+aws-cdk.aws-stepfunctions
+aws-cdk.aws-stepfunctions-tasks
