--- a/cloud-front/package.json
+++ b/cloud-front/package.json
@@ -23,6 +23,7 @@
     "@aws-amplify/core": "^6.3.3",
     "@aws-amplify/ui": "^6.0.16",
     "@aws-amplify/ui-angular": "^5.0.16",
+    "amazon-cognito-identity-js": "^6.3.12",
     "aws-amplify": "^6.3.8",
     "aws-sdk": "^2.1649.0",
     "rxjs": "~7.8.0",
@@ -34,12 +35,15 @@
     "@angular/cli": "^17.0.8",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.14.9",
+    "crypto-browserify": "^3.12.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "node-polyfill-webpack-plugin": "^4.0.0",
     "typescript": "~5.2.2"
   }
 }
