--- a/cloud-front/package.json
+++ b/cloud-front/package.json
@@ -26,6 +26,7 @@
     "amazon-cognito-identity-js": "^6.3.12",
     "aws-amplify": "^6.3.8",
     "aws-sdk": "^2.1649.0",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
