--- a/cloud-front/package.json
+++ b/cloud-front/package.json
@@ -27,6 +27,8 @@
     "aws-amplify": "^6.3.8",
     "aws-sdk": "^2.1649.0",
     "file-saver": "^2.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
